objects/Loop__DDP__c.object
<CustomObject>
    <customHelpPage>Loop__aboutloop</customHelpPage>
    <description>Nintex DocGen Packages</description>
    <fields>
        <fullName>Loop__AdHoc_Apex_Class__c</fullName>
        <label>AdHoc Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__AddendumDocIdField__c</fullName>
        <inlineHelpText>Enter the field name that stores a Document Id to include the document(s) in the Document Package. (Use the Field Tagger with Document Type set to Excel.)</inlineHelpText>
        <label>Addendum Doc Id Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__AllowOutputAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allows the user to chose to store the Document Package output as determined by the Attach As field.</inlineHelpText>
        <label>Allow output to be attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Allow_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This allows the user to add attachments from the associated objects to the end of the Document Package.</inlineHelpText>
        <label>Allow Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Allow_UserId_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow UserId Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Attach_As__c</fullName>
        <inlineHelpText>Attachment will create a Salesforce attachment; LOOP Storage will create a document in the LOOP Storage interface; Content and Content - User Selected will create a Content document in the appropriate Workspace.</inlineHelpText>
        <label>Store As</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>Activity History</fullName>
                </value>
                <value>
                    <fullName>LOOP Storage</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Content - User Selected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Business_User__c</fullName>
        <label>Business User</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Field Service</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Case_Articles__c</fullName>
        <formula>IF( ISBLANK( Loop__KA_Required__c ) , &quot;&quot; , &quot;Required: &quot; ) &amp; 
SUBSTITUTE( SUBSTITUTE( Loop__KA_Required__c , &quot;,&quot; , &quot;, &quot; ) , &quot;__kav&quot; , &quot;&quot; ) &amp; 

IF( OR( ISBLANK( Loop__KA_Required__c ) , ISBLANK( Loop__KA_Optional__c ) ) , &quot;&quot; , BR() ) &amp; 
IF( ISBLANK( Loop__KA_Optional__c ) , &quot;&quot; , &quot;Optional: &quot; ) &amp; 
SUBSTITUTE( SUBSTITUTE( Loop__KA_Optional__c , &quot;,&quot; , &quot;, &quot; ) , &quot;__kav&quot; , &quot;&quot; ) &amp; 

IF( AND( NOT( ISBLANK( Loop__KA_Separate__c ) ) , NOT( AND( ISBLANK( Loop__KA_Required__c ) , ISBLANK( Loop__KA_Optional__c ) ) ) ) , BR() , &quot;&quot; ) &amp; 
IF( ISBLANK( Loop__KA_Separate__c ) , &quot;&quot; , &quot;Separate Optional: &quot; ) &amp; 
SUBSTITUTE( SUBSTITUTE( Loop__KA_Separate__c , &quot;,&quot; , &quot;, &quot; ) , &quot;__kav&quot; , &quot;&quot; ) &amp; 

IF( AND( ISBLANK( Loop__KA_Required__c ) , ISBLANK( Loop__KA_Optional__c ) , ISBLANK( Loop__KA_Separate__c ) ) , &quot;None&quot; , BR() ) &amp; 
&quot; [&quot; &amp; HYPERLINK( &quot;/apex/loop__ddpEdit?type=article&amp;ddpId=&quot; &amp; Id , &quot;Change&quot; , &quot;_self&quot; ) &amp; &quot;]&quot;</formula>
        <label>Case Articles</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Content_Workspace__c</fullName>
        <formula>IF ( OR( ISPICKVAL( Loop__Attach_As__c , &quot;Content&quot;) , ISPICKVAL( Loop__Attach_As__c , &quot;Content - User Selected&quot;) ) , IF ( Loop__WorkspaceId__c = &quot;&quot; , &quot;Personal&quot; , HYPERLINK(&quot;/&quot; &amp;  Loop__WorkspaceId__c , IF ( Loop__WorkspaceName__c = &quot;&quot; , Loop__WorkspaceId__c , Loop__WorkspaceName__c ) ) ) &amp; &quot; [&quot; &amp; HYPERLINK(&quot;/apex/loop__ddpContentWorkspace?type=workspace&amp;ddpId=&quot; &amp; Id , &quot;Change&quot; , &quot;_self&quot; ) &amp; &quot;]&quot; , &quot;None&quot;)</formula>
        <label>Content Library</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__DDP_Additional_To__c</fullName>
        <inlineHelpText>This will default the &apos;Additional To&apos; field when delivering the Document Package via email. Use the Field Tagger to use dynamic email addresses.</inlineHelpText>
        <label>Additional To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__DDP_BCC__c</fullName>
        <inlineHelpText>This will default the &apos;BCC&apos; field when delivering the Document Package via email. Use the Field Tagger to use dynamic email addresses.</inlineHelpText>
        <label>BCC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__DDP_CC__c</fullName>
        <inlineHelpText>This will default the &apos;CC&apos; field when delivering the Document Package via email.Use the Field Tagger to use dynamic email addresses.</inlineHelpText>
        <label>CC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Day__c</fullName>
        <inlineHelpText>If monthly is selected and you specify a day between 29 and 31, the report runs only in the months that contain that day.</inlineHelpText>
        <label>Day</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Loop__Frequency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Default_Email_Template__c</fullName>
        <formula>IF(Loop__Email_Template__c =&quot;&quot;, HYPERLINK(&quot;/apex/loop__selectemailtemplate?ddpId=&quot; &amp; Id, IMAGE(&quot;/img/icon/documents16.png&quot;, &quot;Change&quot;) &amp; &quot; Select Email Template&quot;,&quot;_self&quot;), HYPERLINK(&quot;/&quot; &amp; Loop__Email_Template__c &amp; &quot;/s?id=&quot; &amp; Loop__Email_Template__c &amp; &quot;&amp;previewMode=1&quot;, IMAGE(&quot;/img/icon/mail16.png&quot;, &quot;Preview&quot;) &amp; &quot; Preview&quot;,&quot;_blank&quot;) &amp; &quot; &quot; &amp; HYPERLINK(&quot;/apex/loop__selectemailtemplate?ddpId=&quot; &amp; Id, IMAGE(&quot;/img/icon/documents16.png&quot;, &quot;Change&quot;) &amp; &quot; Change&quot;,&quot;_self&quot;)&amp; &quot; &quot; &amp; HYPERLINK(&quot;/apex/loop__selectemailtemplate?ddpId=&quot; &amp; Id &amp; &quot;&amp;ic=None&quot;, &quot; None&quot;,&quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Email Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Description__c</fullName>
        <inlineHelpText>For internal use.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Document_Type__c</fullName>
        <label>Document Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Word</fullName>
                </value>
                <value>
                    <fullName>Excel</fullName>
                </value>
                <value>
                    <fullName>PowerPoint</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Email_Template__c</fullName>
        <label>Email Template</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Enclosure_Folder_Id__c</fullName>
        <label>Enclosure Folder Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Enclosure_Limit__c</fullName>
        <inlineHelpText>Limit the number of enclosures that can be selected.</inlineHelpText>
        <label>Enclosure Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__Exclude_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If selected, the user cannot send this Document Package to a Salesforce email template.</inlineHelpText>
        <label>Exclude Email Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Exclude_LOOP__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If selected, the user cannot send this Document Package to LOOP. LOOP is a PDF conversion service. It can be used to upload ad hoc documents to convert to PDF and combine with other documents into one PDF.</inlineHelpText>
        <label>Exclude LOOP Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Exclude_Queue__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If selected, the user cannot send this Document Package to the document queue. The Document Queue allows DDPs to be generated behind the scenes and allows for inter-department fulfillment options.</inlineHelpText>
        <label>Exclude DocGen Queue Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Filter__c</fullName>
        <inlineHelpText>Use this value with the filter and filtertype querystring parameters on your custom button or link to filter which DDPs are listed. Filtertype options are equals, doesnotequal, startswith, endswith, contains, and doesnotcontain.</inlineHelpText>
        <label>Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Frequency__c</fullName>
        <inlineHelpText>Once activated, your report will be emailed out at this frequency.</inlineHelpText>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Machinery</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Not For Profit</fullName>
                </value>
                <value>
                    <fullName>Recreation</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__KA_Optional__c</fullName>
        <inlineHelpText>Files from selected article types can be included at Document Package run time.

Use Shift or Ctrl to select multiple options. Use Ctrl to deselect.</inlineHelpText>
        <label>Optional Articles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__KA_Required__c</fullName>
        <inlineHelpText>All files from selected Article Types will be included with the Document Package automatically.

Use Shift or Ctrl to select multiple options. Use Ctrl to deselect.</inlineHelpText>
        <label>Required Articles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__KA_Separate__c</fullName>
        <inlineHelpText>Files from selected article types can be included as separate attachments at run time. (If an article has more than one file field, the files will be listed as separate options.)

Use Shift or Ctrl to select multiple options. Use Ctrl to deselect.</inlineHelpText>
        <label>Separate Optional Articles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Keep_Word_Formulas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep Word Formulas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__LastSent__c</fullName>
        <inlineHelpText>Once activated, this field will be updated each time the report is sent out.</inlineHelpText>
        <label>Last Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loop__Limit_Availability__c</fullName>
        <inlineHelpText>Use Limit Deployment instead.</inlineHelpText>
        <label>Limit Availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mass Only</fullName>
                </value>
                <value>
                    <fullName>Non Mass Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Limit_Deployment__c</fullName>
        <inlineHelpText>If no options are selected, the Document Package will be available for all deployment types.</inlineHelpText>
        <label>Limit Deployment (Deprecated)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Mass</fullName>
                </value>
                <value>
                    <fullName>iPad</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Locale__c</fullName>
        <inlineHelpText>This will override the user&apos;s locale when running a Document Package. The value must be a valid locale (e.g. en-us, en-uk, fr-ca, etc.). Use the Field Tagger to dynamically set the locale.</inlineHelpText>
        <label>Locale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__MassEmailReport__c</fullName>
        <inlineHelpText>This is a Salesforce Report Id. The first column (# zero) of the report must be the lead, contact, or user id that the report will be emailed to. Each consecutive column can be used in a report filter as !param# where # is the column number.</inlineHelpText>
        <label>Mass Email Report to</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Mass_Email_Report_Name__c</fullName>
        <label>Mass Email Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Mass_Email_Report_to__c</fullName>
        <formula>IF( ISBLANK( Loop__MassEmailReport__c ) , &quot;None&quot; , HYPERLINK( &quot;/&quot; &amp; Loop__MassEmailReport__c , IF( ISBLANK( Loop__Mass_Email_Report_Name__c ) , Loop__MassEmailReport__c , Loop__Mass_Email_Report_Name__c ) ) ) &amp; &quot; [&quot; &amp; HYPERLINK(&quot;/apex/loop__ddpEdit?type=massreport&amp;ddpId=&quot; &amp; Id, &quot;Change&quot; , &quot;_self&quot; ) &amp; &quot;]&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a Salesforce Report. The first column (# zero) of the report must be the lead, contact, or user id that the report will be emailed to. Each consecutive column can be used in a report filter as !param# where # is the column number.</inlineHelpText>
        <label>Mass Recipient Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Object_Name_Link__c</fullName>
        <formula>IF( ISBLANK( Loop__Object_Name__c ) , &quot;None&quot; , Loop__Object_Name__c ) &amp; &quot; [&quot; &amp; HYPERLINK(&quot;/apex/loop__ddpEdit?type=objectname&amp;ddpId=&quot; &amp; Id, &quot;Change&quot; , &quot;_self&quot; ) &amp; &quot;]&quot;</formula>
        <label>Object Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Object_Name__c</fullName>
        <inlineHelpText>Enter the API name of the custom object this Document Package should be available from.</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Office_Version__c</fullName>
        <description>DocGen Package Templates will be processed using this version of Office. This does not need to match the version that the DocGen Package Templates were created/modified in.</description>
        <inlineHelpText>Document Package Templates will be processed using this version of Office. This does not need to match the version that the Document Package Templates were created/modified in.</inlineHelpText>
        <label>Office Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                    <default>true</default>
                    <label>2010</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__OrgWideEmailAddress__c</fullName>
        <label>OrgWideEmailAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__OrgWideEmailId__c</fullName>
        <label>Org-Wide Email Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__OrgWideEmailName__c</fullName>
        <label>OrgWideEmailName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Org_Wide_Email__c</fullName>
        <formula>IF( ISBLANK( Loop__OrgWideEmailId__c ) , &quot;None&quot; , IF( ISBLANK( Loop__OrgWideEmailName__c ), IF( ISBLANK( Loop__OrgWideEmailAddress__c ), Loop__OrgWideEmailId__c, Loop__OrgWideEmailAddress__c ), IF( ISBLANK( Loop__OrgWideEmailAddress__c ), Loop__OrgWideEmailName__c, Loop__OrgWideEmailName__c &amp; &quot; (&quot; &amp; Loop__OrgWideEmailAddress__c &amp; &quot;)&quot; ) )  ) &amp; &quot; [&quot; &amp;  HYPERLINK(&quot;/apex/loop__ddpEdit?type=orgwideemail&amp;ddpId=&quot; &amp; Id, &quot;Change&quot; , &quot;_self&quot; )  &amp; &quot;]&quot;</formula>
        <inlineHelpText>For information on Organization-Wide Addresses, search the Salesforce Help site for organization-wide addresses.</inlineHelpText>
        <label>Org-Wide Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Output_Filename__c</fullName>
        <defaultValue>&quot;File&quot;</defaultValue>
        <inlineHelpText>This is the name for the Document Package output file. Use the Field Tagger to make this dynamic. Examples: &quot;Quote &lt;&lt;Opportunity_Quote_Num&gt;&gt;&quot; or &quot;&lt;&lt;Account_Name&gt;&gt; Proposal&quot;.</inlineHelpText>
        <label>Output Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Output__c</fullName>
        <label>Document Output Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>Originals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Preview_URL__c</fullName>
        <label>Preview URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Loop__ProcessingText__c</fullName>
        <inlineHelpText>Semi-colon delimited list of at most 6 values. Defaults to: initializing ddp; security check; acquiring data; looping documents; combining ddp; routing ddp. For no processing text, type null.</inlineHelpText>
        <label>Processing Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Queue_Folder_Id__c</fullName>
        <inlineHelpText>Documents sent to the Queue from this Document Package will be stored in this Document Folder.</inlineHelpText>
        <label>Queue Folder Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Quote_Attachments__c</fullName>
        <label>Quote Attachments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allow</fullName>
                </value>
                <value>
                    <fullName>Require</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__RelatedContent__c</fullName>
        <label>Related Content</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allow</fullName>
                </value>
                <value>
                    <fullName>Require</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__RelatedObjects__c</fullName>
        <description>This is a semicolon delimited list of object API names (and optionally the parent API name separated by a comma) that have a custom relationship with an included (standard or originating) object. Example: &quot;Custm_Obj1__c; Custm_Obj2__c, Account&quot;</description>
        <inlineHelpText>This field has been deprecated. Use the Related Object list instead. (Values in this field will overwrite the Related Object list.)</inlineHelpText>
        <label>Related Objects (Deprecated)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Remove_Invalid_Characters__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If data in a Salesforce report contains bad/invalid characters, checking this option will remove them from the data.</inlineHelpText>
        <label>Remove Invalid Characters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__RenameLOOP__c</fullName>
        <inlineHelpText>The LOOP It delivery option will be renamed to this value.</inlineHelpText>
        <label>Rename LOOP It</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__ReportStatus__c</fullName>
        <formula>IF( Loop__IsActive__c , &quot;Active&quot; , &quot;Not Active&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__RequireAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, the user must select an attachment to be appended to the Document Package. This option requires Allow Attachments to also be selected.</inlineHelpText>
        <label>Require Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__RequireContact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, the user must select a contact to be used with this Document Package.</inlineHelpText>
        <label>Require Contact Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__RequireOutputAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The Document Package output will be stored as specified in the Attach As field.</inlineHelpText>
        <label>Require output to be attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Scheduled_Delivery_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduled Delivery Option</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only non-download Delivery Options related to this DocGen Package allowed.</errorMessage>
            <filterItems>
                <field>Loop__DDP_Integration_Option__c.Loop__DDP__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Loop__DDP_Integration_Option__c.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Download</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Loop__DDP_Integration_Option__c</referenceTo>
        <relationshipLabel>DocGen Packages</relationshipLabel>
        <relationshipName>Document_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loop__SecurityType__c</fullName>
        <defaultValue>&quot;profile&quot;</defaultValue>
        <label>SecurityType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Security__c</fullName>
        <defaultValue>IF( $RecordType.Name = &apos;Report&apos;, &quot;&apos;&quot; &amp; $User.Id &amp; &quot;&apos;&quot; , &quot;&apos;&quot; &amp; $User.ProfileId &amp; &quot;&apos;&quot; )</defaultValue>
        <description>List of Profile, Role, Contact, and or User Ids associated with a DocGen Package.</description>
        <label>Security</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Skip_AdHoc_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By default, all files, including those selected at run time, are processed. Check this to prevent processing of ad hoc files selected at run time.</description>
        <label>Skip AdHoc Processing</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>